# D-FINE-seg-ready-for-training

./: CHANGELOG.md  CLAUDE.md  Makefile  README.md  colab_training_ua.md  config.yaml  config_.yaml  kaggle_training_ua.md  pyproject.toml
demo/: demo.py
paper_assets/: video_inference_bench.md
paper_assets/src/: compute_coco_ap.py  plot_comparison.py  reproduce.md  run_bench.py  split_by_batch.py  taco_to_yolo.py  train_yolo.py  video_inference_bench.py
scripts/: preview_npy.py
src/d_fine/: configs.py  dfine.py  dfine_criterion.py  dist_utils.py  matcher.py  utils.py
src/d_fine/arch/: dfine_decoder.py  hgnetv2.py  hybrid_encoder.py  utils.py
src/dl/: bench.py  check_errors.py  dataset.py  export.py  infer.py  ov_int8.py  test_batching.py  train.py  trt_int8.py  utils.py  validator.py
src/etl/: coco2yolo.py  m3fd_to_yolo.py  png_mask_to_yolo.py  polys2bbox.py  sam_labels.py  set_yolo_classes_zero.py  split_vis_drone.py  split_yolo_from_dfine.py
src/infer/: byte_track.py  coreml_model.py  litert_model.py  onnx_model.py  ov_model.py  sam3_model.py  torch_model.py  trt_model.py
tests/: conftest.py  generate_fixtures.py
tests/assets/: baseline.json  park_gen.txt  west_cost_gen.txt
tests/integration/: test_cpu_forward.py  test_pretrained_accuracy.py
tests/unit/: test_box_conversions.py  test_box_iou.py  test_criterion.py  test_etl.py  test_filter_nms.py  test_inflate_stem_weight.py  test_letterbox.py  test_matcher.py  test_polygon_mask.py  test_read_image_channel_order.py  test_rle.py  test_validator.py
