[project]
name = "d-fine-seg"
version = "0.1.0"
description = "D-FINE-seg: detection + instance segmentation framework"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "albumentations==2.0.8",
    "coremltools==9.0",
    "difPy==4.2.1",
    "faster-coco-eval==1.6.5",
    "gradio==6.16.0",
    "huggingface-hub==1.13.0",
    "hydra-core==1.3.2",
    "litert-torch==0.8.0",
    "loguru==0.7.2",
    "matplotlib==3.10.3",
    "nncf==2.18.0",
    "numpy==2.1.1",
    "omegaconf==2.3.0",
    "onnx==1.21.0",
    "onnxconverter-common==1.16.0",
    "onnxruntime==1.21.1",
    "onnxscript==0.6.2",
    "onnxsim==0.4.36; sys_platform == 'linux'",
    "opencv-python-headless==4.10.0.84",
    "openvino==2025.2.0",
    "pandas==2.2.3",
    "pillow==12.2.0",
    "pillow-heif==1.3.0",
    "protobuf==6.33.5",
    "pycocotools==2.0.8",
    "pyyaml==6.0.2",
    "scikit-learn==1.7.0",
    "scipy==1.15.1",
    "tabulate==0.9.0",
    "tensorrt==10.13.3.9; sys_platform == 'linux'",
    "torch==2.9.0",
    "torchmetrics==1.7.4",
    "torchvision==0.24.0",
    "tqdm==4.66.5",
    "wandb==0.26.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-xdist>=3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: integration tests that load pretrained weights (~10-30s)",
    "gpu: requires CUDA",
]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::pyparsing.exceptions.PyparsingDeprecationWarning",
]

[tool.uv]
package = false
# Lock for both dev (mac) and training (linux) so uv.lock is portable.
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[[tool.uv.dependency-metadata]]
name = "tensorrt"
version = "10.13.3.9"
requires-dist = ["tensorrt-cu12==10.13.3.9"]

[[tool.uv.dependency-metadata]]
name = "tensorrt-cu12"
version = "10.13.3.9"
requires-dist = [
    "tensorrt-cu12-bindings==10.13.3.9",
    "tensorrt-cu12-libs==10.13.3.9",
]

[[tool.uv.dependency-metadata]]
name = "tensorrt-cu12-bindings"
version = "10.13.3.9"
requires-dist = []

[[tool.uv.dependency-metadata]]
name = "tensorrt-cu12-libs"
version = "10.13.3.9"
requires-dist = []
